<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="293dp"
    android:maxWidth="293dp"
    android:background="@drawable/background_10dp_rectangle">

    <TextView
        android:id="@+id/title_text"
        android:text="@string/deleting_message"
        android:textSize="14sp"
        android:textColor="@color/base_text"
        android:fontFamily="@font/roboto_300"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/delete_text"
        android:text="@string/delete"
        android:textSize="14sp"
        android:textColor="@color/base_UI"
        android:fontFamily="@font/roboto_500"
        android:textAllCaps="true"
        android:padding="9dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cancel_text"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:textColor="@color/gray_dark"
        android:fontFamily="@font/roboto_500"
        android:textAllCaps="true"
        android:padding="9dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintEnd_toStartOf="@id/delete_text" />

</androidx.constraintlayout.widget.ConstraintLayout>