<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.BottomNavBarActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <include
            android:id="@+id/header"
            layout="@layout/fragment_header"/>

        <EditText
            android:id="@+id/debt_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt_hint"
            android:inputType="number"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"/>

        <CheckBox
            android:id="@+id/cb_me_too"
            android:text="@string/checkbox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/debt_ed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_depts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adding_debts"
            android:layout_margin="16dp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/debt_ed"/>

        <TextView
            android:id="@+id/list_empty_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_is_empty"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@id/add_depts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item"
            android:paddingBottom="100dp"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_depts"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>