<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/text_choose_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_300"
        android:text="@string/choose_date_from"
        android:textColor="@color/gray_dark"
        app:layout_constraintEnd_toStartOf="@id/text_choose_date_to"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_peek_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_400"
        android:drawablePadding="10dp"
        android:backgroundTint="@color/base_UI"
        android:drawableTint="@color/base_UI"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="@id/text_choose_date_from"
        app:layout_constraintEnd_toEndOf="@id/text_choose_date_from"
        app:layout_constraintTop_toBottomOf="@id/text_choose_date_from"
        app:drawableLeftCompat="@drawable/ic_peek_date" />

    <TextView
        android:id="@+id/text_choose_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_300"
        android:text="@string/choose_date_to"
        android:textColor="@color/gray_dark"
        app:layout_constraintStart_toEndOf="@id/text_choose_date_from"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_peek_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_400"
        android:drawablePadding="10dp"
        android:backgroundTint="@color/base_UI"
        android:drawableTint="@color/base_UI"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="@id/text_choose_date_to"
        app:layout_constraintEnd_toEndOf="@id/text_choose_date_to"
        app:layout_constraintTop_toBottomOf="@id/text_choose_date_to"
        app:drawableLeftCompat="@drawable/ic_peek_date" />

    <RadioButton
        android:id="@+id/radio_show_history_all_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_history_all_time"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:paddingStart="5dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/roboto_300"
        android:buttonTint="@color/base_UI"
        android:textColor="@color/base_text"
        app:layout_constraintTop_toBottomOf="@id/ed_peek_date_from"
        app:layout_constraintStart_toEndOf="@id/guideline_left" />

    <RadioButton
        android:id="@+id/radio_debt_for_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debt_for_me_one_line"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:paddingStart="5dp"
        android:textSize="16sp"
        android:checked="true"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/roboto_300"
        android:buttonTint="@color/base_UI"
        android:textColor="@color/base_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="@id/view_divider"
        app:layout_constraintBottom_toBottomOf="@id/view_divider"
        app:layout_constraintEnd_toStartOf="@id/view_divider" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="1dp"
        android:layout_height="31dp"
        android:background="@color/color_divider"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/radio_show_history_all_time"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_right" />

    <RadioButton
        android:id="@+id/radio_my_debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_debt"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:paddingStart="5dp"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto_300"
        android:buttonTint="@color/base_UI"
        android:textColor="@color/base_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="@id/view_divider"
        app:layout_constraintBottom_toBottomOf="@id/view_divider"
        app:layout_constraintStart_toEndOf="@id/view_divider" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_debtor"
        android:background="@drawable/button_background_10dp_gradient"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="19dp"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/debt_add"
        android:textSize="22sp"
        android:letterSpacing="0.0"
        android:fontFamily="@font/roboto_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider" />

    <TextView
        android:id="@+id/text_history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debts_history"
        android:textColor="@color/base_text"
        android:fontFamily="@font/roboto_300"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/add_debtor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/text_history_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/recycler_row_history" />

</androidx.constraintlayout.widget.ConstraintLayout>