<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="@id/text_header"
        app:layout_constraintBottom_toBottomOf="@id/text_header"
        app:layout_constraintStart_toEndOf="@id/guideline_left" />

    <ImageView
        android:id="@+id/image_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_accept"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="@id/text_header"
        app:layout_constraintBottom_toBottomOf="@id/text_header"
        app:layout_constraintEnd_toStartOf="@id/guideline_right" />

    <TextView
        android:id="@+id/text_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="26sp"
        android:fontFamily="@font/roboto_400"
        android:text="@string/new_debtor"
        android:textAlignment="center"
        android:textColor="@color/base_text"
        app:layout_constraintStart_toEndOf="@id/image_back"
        app:layout_constraintEnd_toStartOf="@id/image_accept"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_date_of_debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_300"
        android:text="@string/date_setting_debt"
        android:textColor="@color/gray_dark"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/text_header" />

    <TextView
        android:id="@+id/text_peek_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_300"
        android:text="10.04.2022"
        android:textColor="@color/base_UI"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/text_date_of_debt"
        app:drawableLeftCompat="@drawable/ic_peek_date" />

<!--    <RadioGroup-->
<!--        android:id="@+id/radio_group"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@id/text_peek_date"-->
<!--        app:layout_constraintStart_toEndOf="@id/guideline_left"-->
<!--        app:layout_constraintEnd_toStartOf="@id/guideline_right"-->
<!--        android:orientation="horizontal"-->
<!--        >-->
        <RadioButton
            android:id="@+id/radio_debt_for_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debt_for_me_one_line"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingStart="5dp"
            android:textSize="16sp"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/roboto_300"
            android:buttonTint="@color/base_UI"
            android:textColor="@color/base_text"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@id/view_divider"
            app:layout_constraintBottom_toBottomOf="@id/view_divider"
            app:layout_constraintEnd_toStartOf="@id/view_divider" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="1dp"
            android:layout_height="31dp"
            android:background="@color/color_divider"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@id/text_peek_date"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right" />

        <RadioButton
            android:id="@+id/radio_my_debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_debt"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingStart="5dp"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_300"
            android:buttonTint="@color/base_UI"
            android:textColor="@color/base_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@id/view_divider"
            app:layout_constraintBottom_toBottomOf="@id/view_divider"
            app:layout_constraintStart_toEndOf="@id/view_divider" />
<!--    </RadioGroup>-->

    <EditText
        android:id="@+id/fio_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:hint="@string/fio_hint"
        android:textSize="18sp"
        android:paddingHorizontal="25dp"
        android:fontFamily="@font/roboto_300"
        android:paddingVertical="12dp"
        android:textColorHint="@color/base_UI_mute"
        android:background="@drawable/background_10dp_rectangle_coloronprimary"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/view_divider"
        app:layout_constraintStart_toEndOf="@id/guideline_left" />

    <EditText
        android:id="@+id/debt_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:hint="@string/debt_hint_two"
        android:textSize="18sp"
        android:paddingHorizontal="25dp"
        android:fontFamily="@font/roboto_300"
        android:paddingVertical="12dp"
        android:textColorHint="@color/base_UI_mute"
        android:background="@drawable/background_10dp_rectangle_coloronprimary"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toStartOf="@id/text_currency"
        app:layout_constraintTop_toBottomOf="@id/fio_ed"
        app:layout_constraintStart_toEndOf="@id/guideline_left" />

    <TextView
        android:id="@+id/text_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_300"
        android:text="RUB"
        android:textColor="@color/gray_dark"
        android:drawablePadding="13dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="@id/debt_ed"
        app:layout_constraintBottom_toBottomOf="@id/debt_ed"
        app:drawableRightCompat="@drawable/ic_arrow_down" />

    <EditText
        android:id="@+id/phone_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:hint="@string/phone"
        android:textSize="18sp"
        android:paddingHorizontal="25dp"
        android:fontFamily="@font/roboto_300"
        android:paddingVertical="12dp"
        android:textColorHint="@color/base_UI_mute"
        android:background="@drawable/background_10dp_rectangle_coloronprimary"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/debt_ed"
        app:layout_constraintStart_toEndOf="@id/guideline_left" />

    <EditText
        android:id="@+id/description_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:hint="@string/description_debt_hint_two"
        android:textSize="18sp"
        android:paddingHorizontal="25dp"
        android:fontFamily="@font/roboto_300"
        android:paddingVertical="12dp"
        android:textColorHint="@color/base_UI_mute"
        android:background="@drawable/background_10dp_rectangle_coloronprimary"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/phone_ed"
        app:layout_constraintStart_toEndOf="@id/guideline_left" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_debtor"
        android:background="@drawable/button_background_10dp_gradient"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/debt_add"
        android:textSize="22sp"
        android:letterSpacing="0.0"
        android:fontFamily="@font/roboto_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_ed" />

</androidx.constraintlayout.widget.ConstraintLayout>